@@ -4,6 +4,7 @@ attribute vec4 a_position;
 
 uniform	mat4 u_MVPMatrix;
 uniform	vec4 u_color;
+uniform float u_pointSize;
 
 #ifdef GL_ES
 varying lowp vec4 v_fragmentColor;
@@ -14,5 +15,6 @@ varying vec4 v_fragmentColor;
 void main()
 {
     gl_Position = u_MVPMatrix * a_position;
+	gl_PointSize = u_pointSize;
 	v_fragmentColor = u_color;
 }
